@@ -1,5 +1,13 @@
 2002-11-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03383] Select the nearest map area as default.
+	* fm.h (MapArea): add center_x, center_y
+	* map.c (nearestMapArea): added
+		(follow_map_menu): initial by nearestMapArea()
+		(newMapArea): set center_x, center_y
+
+2002-11-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03382] Interrupt in no_proxy_check()
 	* url.c (check_no_proxy): SIGINT trap by KeyAbort
 
@@ -4365,4 +4373,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.482 2002/11/06 15:03:25 ukai Exp $
+$Id: ChangeLog,v 1.483 2002/11/06 15:07:40 ukai Exp $
